# rusty-rom-manager

./: .gitignore  Cargo.toml  README.md
src/: main.rs  organizer.rs
src/organizer/: file_types.rs  mod.rs
src/verify/: mod.rs
