[package]
name = "rom_manager"
description = "A tool for managing your ROM library"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
log = "0.4.21"
log4rs = "1.3.0"
serde = { version = "1.0.198", features = ["derive"] }
serde-xml-rs = "0.6.0"
sha1_smol = "1.0.1"
